name:          sth
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.10

executable sth-noop
  main-is:          noop.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-copy
  main-is:          copy.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-count
  main-is:          count.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-wordcount
  main-is:          wordcount.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-sentcount
  main-is:          sentcount.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-glyphcount
  main-is:          glyphcount.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-detab
  main-is:          detab.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-charcombine
  main-is:          charcombine.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-charfullwidth
  main-is:          charfullwidth.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-entab
  main-is:          entab.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-echo
  main-is:          echo.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-overstrike
  main-is:          overstrike.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-unescape
  main-is:          unescape.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010
  other-modules:    Lib.Backslash

executable sth-escape
  main-is:          escape.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-compress
  main-is:          compress.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-expand
  main-is:          expand.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-crypt
  main-is:          crypt.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010
  other-modules:    Lib.Backslash

executable sth-translit
  main-is:          translit.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010
  other-modules:    Lib.Backslash

executable sth-charreplace
  main-is:          charreplace.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010
  other-modules:    Lib.Backslash

executable sth-tail
  main-is:          tail.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-getlines
  main-is:          getlines.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-compare
  main-is:          compare.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010
  other-modules:    Lib.Backslash

executable sth-import
  main-is:          import.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-concat
  main-is:          concat.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-wye
  main-is:          wye.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-pslineprint
  main-is:          pslineprint.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-paginate
  main-is:          paginate.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-examine
  main-is:          examine.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-archive
  main-is:          archive.lhs
  build-depends:    base == 4.*, directory
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-linenumber
  main-is:          linenumber.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010

executable sth-bubble
  main-is:          bubble.lhs
  build-depends:    base == 4.*
  ghc-options:      -threaded -O2
  default-language: Haskell2010
